Fixed Button on temp.html

--- a/HistoryLocker/temp.html
+++ b/HistoryLocker/temp.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <button class="button" id="unlockHistory">CLICK ME AND SECRETS YOU SHALL SEE!</button>
+    <button class="button" id="unlockHistory">CLICK ME AND MANY SECRETS YOU SHALL SEE!</button>
     <script src = "temp.js"></script>
 </body>
 </html>
